More changes for new forward testing (unstable)

--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -174,8 +174,8 @@
     <template>
         <aq-check-authentication id='authItem'></aq-check-authentication>
 
-        <aq-loading-progress loading="[[!isComparisonReady(isDataReady)]]">
-        </aq-loading-progress>
+        <!--aq-loading-progress loading="[[!isComparisonReady(isDataReady)]]">
+        </aq-loading-progress-->
 
         <div id='comparisonContainer'>
         <div class="goBackButton layout horizontal">
