--- a/src/components/common/backtest/aq-aggregatedreturns-barchart.html
+++ b/src/components/common/backtest/aq-aggregatedreturns-barchart.html
@@ -20,6 +20,7 @@
 	<script>
 		Polymer({
 			is: 'aq-aggregatedreturns-barchart',
+			
 			properties:{
 
 				yAxis:{ 
@@ -44,6 +45,9 @@
 	            	value:{
 		            	xDateFormat:'%b \'%y',
 		            	shared:true,
+		            	positioner: function () {
+				            return { x: 10, y: 0 };
+				        },
 		            }
 		        },
 
@@ -55,10 +59,9 @@
 					type:Object,
 					value: {
 						enabled:true,
-		          		align:"left",
+		          		align:"right",
 		          		verticalAlign:'top',
 		          		y:15,
-	          	
 		          		itemStyle: {
 		          			fontSize:13,
 		          			fontWeight:"normal",
@@ -67,9 +70,9 @@
 		          		labelFormatter: function(){
 		          			var name = this.name;
 						 	var color = this.color;
-						 	var y = (this.point.y) ? this.point.y.toFixed(2) : 0.0;
 
-	          				return '<span style="color:'+ color+'">' + name + '</span>: <b>' + y +'%</b><br/>';
+	          				return '<span style="color:'+ color+'">' + name + '</span>';
+          					
 	          			}
 		          	},
 				},
@@ -97,7 +100,7 @@
 				plotOptions:{
 					type: Object,
 					value:{
-			            series: {
+			            /*series: {
 			                point: {
 			                    events: {
 			                        mouseOver: function () {
@@ -123,10 +126,9 @@
 			                        }
 								}
 							}
-						}
+						}*/
 					}
 				},
-
 			},
 
 			updateProperties: function() {
@@ -135,18 +137,18 @@
 				this.$$('#barChart').removeSeries(0);
 			},
 
-			addSeries: function(name, data, colorByPoint, options) {
-				this.$$('#barChart').addSeries(name, data, colorByPoint, options);
+			addSeries: function(name, data, options, redraw) {
+				this.$$('#barChart').addSeries(name, data, options, redraw);
 			},
 
-			createMonthlyReturnBarChart: function(backtest) {
+			createMonthlyReturnBarChart: function(monthlyReturns) {
 				var types = ["algorithm","benchmark"];
 				var colors = ["#0375b4", "#cc6666", "#FFAA1D","#007849","#6e2667","#fc4a1a"];
 				var legend = ["Strategy", "Benchmark"];
 				
-				for (index=0; index<types.length;index++) {
+				for (var index=0; index<types.length;index++) {
 
-					var aggregatedReturns = backtest.output.returns.monthly[types[index]];
+					var aggregatedReturns = monthlyReturns[types[index]];
 					var keys = Object.keys(aggregatedReturns);
 					var dataset = new Array(keys.length);
 
@@ -156,14 +158,14 @@
 	      				dataset[i] = [Date.parse(v.substring(0, 4)+"-"+v.substring(4, 6)), aggregatedReturns[v]];
 	       			}); 
 
-		  			this.$$('#barChart').addSeries(legend[index], dataset, false, {
+		  			this.addSeries(legend[index], dataset, {
 		  					color:colors[index], 
 		  					tooltip: {
 		  						valueSuffix:'%',
 		  						pointFormat:'<span style="color:{point.color}">\u25CF</span> {series.name}: <b>{point.y}</b><br/>',
 		  					},
 
-		  				}
+		  				}, false
 	  				);	
 				}
 
