--- a/src/components/common/backtest/aq-backtest-detail-item-2.html
+++ b/src/components/common/backtest/aq-backtest-detail-item-2.html
@@ -621,8 +621,7 @@
 
             onGetBacktestSuccess: function (e) {
 
-                //this.
-                //this.reset();
+                this.reset();
 
                 this.set('backtest', e.detail.response);
 
