--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -87,7 +87,7 @@
 
             computeAnalyzePage: function (homeActive, detailActive, queryParams) {
 
-                console.log(queryParams);
+                //console.log(queryParams);
 
                 var x = "";
                 if (detailActive) {
