--- a/src/components/analyze/aq-analyze-backtest-detail.html
+++ b/src/components/analyze/aq-analyze-backtest-detail.html
@@ -5,7 +5,6 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel="import" href="../common/backtest/aq-backtest-detail-item.html">
 <link rel="import" href="../common/aq-check-authentication.html">
-<link rel="import" href="../common/aq-loading-progress.html">
 <link rel="import" href="../common/aq-allpage-layout.html">
 
 <dom-module id="aq-analyze-backtest-detail">
@@ -13,20 +12,27 @@
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
 
+	<style>
+		#backtest-detail-container {
+			margin-left: 0%;
+			margin-right: 0%; 
+			margin-top: 0px;
+		}
+	</style>
+
 	<template>
 	 	<aq-check-authentication id='authItem'></aq-check-authentication>
-	
-    		<aq-loading-progress loading='{{loading}}'></aq-loading-progress>
-		  	
-	  	 	<template is='dom-if' if='{{!loading}}'>
-			    <aq-allpage-layout header="Backtest Detail" current-path=[[currentPath]]>
-			  		<div class="internal-content">
-				      	<aq-backtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" heading="[[heading]]"></aq-backtest-detail-item>
-
-				      	<!--aq-forwardtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" index="{{index}}"></aq-forward-detail-item-->
-	      			</div>
-      			</aq-allpage-layout>
-      		</template>
+		
+ 	    <aq-allpage-layout loading="{{loading}}" header="Backtest Detail" current-path=[[currentPath]]>
+	  		<div class="internal-content" id="backtest-detail-container">
+		      	<aq-backtest-detail-item
+		      		loading="{{loading}}" 
+		      		backtest-id="[[backtestId]]" 
+		      		heading="[[heading]]" can-share>
+	      		</aq-backtest-detail-item>
+			</div>
+		</aq-allpage-layout>
+      		
 	</template>
 
 	<script>
@@ -39,17 +45,17 @@
 
 				routeData:Object,
 
-				loading:{
-					type:Boolean,
-					value:false,
-				},
-
 				heading: String, 
 
 				currentPath: {
 					type: Array,
 					value: ["Home", "Research", "All Strategies", "All Backtests", "Backtest Detail"]
-				}
+				},
+
+				loading: {
+					type:Boolean,
+					observer:'_loadingChanged',
+				},
 			},
 
 			goBackAllBacktests: function() {
@@ -57,13 +63,22 @@
 				this.fire('rt-changed',{route:'/dashboard/analyze/' + this.strategyId});
 			},
 
+			_loadingChanged: function(){
+				
+				if(this.loading == false) {
+					this.async(function(){this.$$('.internal-content').style.display = 'block'; 
+					this.$$('aq-backtest-detail-item').resize();}, 500);
+				}
+			},
+
 			attached: function() {
-				console.log(this.heading);
+				this.$$('.internal-content').style.display = 'none';
 				if(!this.$.authItem.checkHasToken()) {
          	 		this.fire('rt-changed',{route:'/user/signin'});
 	          		return;
 	          	} 
 			},
+
 
 		});
 			
