--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -5,11 +5,11 @@
                 display: inline-block;
             }
             span{
-                padding:0;
-                margin:0;
+                --padding:0;
+                --margin:0;
             }
             .tag-content{
-                font-size: 14px;
+                font-size: 16px;
                 color: #cc6666;
                 font-family: 'Lato' , sans-serif;
                 font-weight: 400;
@@ -20,11 +20,11 @@
                 color: #cc6666;
                 border-radius: 2px;
                 margin-right: 15px;
-                border: 1px solid lightgray;
+                border: 1px solid #e1e1e1;
                 --padding-bottom:3px;
             }
         </style>
-        <div class="tag-container layout horizontal self-center">
+        <div class="tag-container layout horizontal">
             <span class="tag-content">[[label]]</span>
             <content></content>
         </div>
