--- a/src/components/common/aq-tags-input-container.html
+++ b/src/components/common/aq-tags-input-container.html
@@ -7,31 +7,25 @@
             }
 
             ::content input {
-                width: 100%;
+                width: 30%;
                 padding: 0;
+                padding-left: 10px;
                 border: none;
                 outline: none;
                 background: none;
                 margin: 0;
-                max-height: 35px;
+                --max-height: 30px;
+                --border: 1px solid #e1e1e1;
+                font-size: 16px;
             }
 
             ::content .tags-container {
-                list-style: none;
-                display: inline-block;
-                height: 35px;
-                max-height: 35px;
                 padding: 0;
                 margin: 0;
-                position: absolute;
                 overflow: hidden;
                 overflow-y: scroll;
-                left: 37%;
-
-            }
-
-            ::content .tags-container li {
-                display: inline;
+                width: 70%;
+                @apply(--layout-horizontal);
             }
 
             ::content .tags-header {
@@ -42,17 +36,14 @@
             .tagsInputContainer {
                 height: var(--tags-container-height,35px);
                 font-size: 16px;
-                margin-bottom: 5px;
+                --margin-bottom: 5px;
                 color: #24293d;
-                position: relative;
                 background-color: var(--tags-container-background-color,#f2f2f2);
                 padding-left: var(--tags-container-padding-left,10px);
                 width:100%;
+                height: 30px;
             }
-
-            ::content input {
-                font-size: 16px;
-            }
+            
         </style>
         <div class="tagsInputContainer layout horizontal center-justified">
             <content></content>
