--- a/src/components/common/backtest/aq-backtest-metric-item.html
+++ b/src/components/common/backtest/aq-backtest-metric-item.html
@@ -15,15 +15,16 @@
 				font-size: var(--aq-backtest-metric-item-text-label-font-size,12px);
 				font-weight: 400;
 			}
+
 			.text-content{
 				font-weight: 400;
 				font-size: var(--aq-backtest-metric-item-text-content-font-size, 20px);
 			}
 			.li-container {
 				text-align: left;
-				margin-top: 5px;
+				--margin-top: 5px;
 				margin-bottom: 5px;
-				border: 1px solid #e1e1e1;
+				border: var(--aq-backtest-metric-item-border, 1px solid #e1e1e1);
 				padding: 10px;
 				width: 100px;
 
@@ -45,8 +46,17 @@
 				metricValue:{
 					type:String,
 					value:"-"
-				}
+				},
+
+				small: {
+					type: Boolean,
+					value: false,
+				},
+			},
+
+			isSmall: function() {
+				return isSmall ? "small" : ""; 
 			}
-		})
+		});
 	</script>
 </dom-module>
