--- a/src/components/common/backtest/aq-forwardtest-detail-item.html
+++ b/src/components/common/backtest/aq-forwardtest-detail-item.html
@@ -1,6 +1,5 @@
 <link rel='import' href='../../../../bower_components/paper-tabs/paper-tabs.html'>
 <link rel='import' href='../../../../bower_components/paper-tabs/paper-tab.html'>
-<link rel='import' href='../../../../bower_components/paper-card/paper-card.html'>
 <link rel='import' href='../../../../bower_components/iron-signals/iron-signals.html'>
 <link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../../bower_components/iron-pages/iron-pages.html'>
@@ -97,6 +96,10 @@
     </style>
 
     <style>
+
+        #container {
+            height: 80%;
+        }
         paper-tabs {
             --paper-tabs-selection-bar-color: #cc6666;
 
@@ -136,10 +139,11 @@
             height: 47px;
         }
 
-        .forwardtest-detail {
-            margin-top: 15px;
+        #forwardtest-detail {
+            --margin-top: 5px;
             border: 1px solid #e1e1e1;
             width: 100%;
+            height: 100%;
         }
 
         #performance-container {
@@ -150,29 +154,45 @@
         #code-container {
             min-height: 200px;
             --padding-top: 10px;
+            margin-left: 2px;
         }        
 
         juicy-ace-editor {
-            border: 1px solid #e1e1e1;
+            --border: 1px solid #e1e1e1;
             --border-top: none;
             --border-left: none;
         }
 
         #iron-page-container {
-            width: 80%;
+            width: 100%;
             margin: 0 auto;
-            margin-top: 25px;
-            margin-bottom: 10px;
-            min-height: 400px;
+            --margin-top: 5px;
+            --margin-bottom: 10px;
+            --min-height: 300px;
+
         }
 
         paper-button {
-            --paper-button:{
+            --paper-button: {
+                font-size: 0.7em;
                 color: white;
-                background-color: #cc6666;
-                height: 24px;
-                font-size: 12px;
+                padding: 0 20px;
+                border-radius: 0;
+                height: 25px;
+                font-weight: 700;
             };
+        }
+
+        paper-button.stop {
+            background-color: #bd362f;
+        }
+
+        paper-button.delete {
+            background-color: #bd362f;
+        }
+
+        paper-button.start {
+            background-color: #339933;
         }
 
         #ft-name {
@@ -186,15 +206,43 @@
         }
 
         #label-text-running {
-            margin-top: 0px !important; 
-            font-size: 14px;  
+            --margin-top: 0px !important; 
+            --font-size: 14px;  
+        }
+
+        .strategy-status {
+            font-size: 12px;
+            margin-top: 3px;
+            margin-right: 10px;
+            padding: 3px;
+            --padding-top: 3px;
+            --padding-bottom: 5px;
+            font-weight: 700;
+            color: white;
+            --border-radius: 25px;
+        }
+
+        .strategy-status.green {
+            background-color: #339933;
+        }
+
+        .strategy-status.red {
+            background-color: #bd362f;
         }
 
         #status-box {
             width: 7px;
             height: 7px;
-            background-color: green;
+            --background-color: green;
             margin-right: 5px;
+        }
+
+        #status-box.green {
+            background-color: #339933;
+        }
+
+        #status-box.red {
+            background-color: #bd362f;
         }
 
         #status-container {
@@ -209,44 +257,50 @@
             --margin-left: -20px;
             color: #555555;
         }
-
     </style>
 
     <template>
-
         <aq-check-authentication id='authItem'></aq-check-authentication>
-    	<div class="layout vertical">
+    	<div id='container' class="layout vertical">
             <template is='dom-if' if='[[forwardtestHeader]]'>
                 <div class="top-container layout horizontal">
                     <div class="layout vertical">
-                        <div id="ft-name">LIVE TEST for [[forwardtestHeader.strategyName]]</div>
-                            
+                        <div class="layout horizontal">
+                            <div id="ft-name" class="self-start"> LIVE TEST for [[forwardtest.strategy.name]]&nbsp</div>
+                            <div class$="strategy-status self-end [[computeStatusClass(forwardtest.active, forwardtest.error)]]" id="label-text-running">[[forwardtestHeader.status]]</div>
+                        </div>
+     
                         <div class="label-text">Created At:&nbsp[[forwardtestHeader.createdAt]]</div>
                         <div class="label-text">Last updated:&nbsp[[forwardtestHeader.updatedAt]]</div>
+
+                        <!--div id='status-container' class="layout horizontal"> 
+                            
+                        </div-->
                         
                     </div>
                     <div class="flex"></div>
                     <div class="layout vertical center">
-                        <paper-button on-tap='stopTest' noink>STOP LIVE TEST</paper-button>
-                        <div id='status-container' class="layout horizontal">
-                            <div id="status-box" class="self-center"></div>
-                            <div class="label-text" id="label-text-running">[[forwardtestHeader.status]]</div>
-                        </div>
+                        <paper-button raised on-tap='onStopTest' noink 
+                        class$="[[computeButtonClass(forwardtest.active, forwardtest.error)]]">
+                        [[computeButtonText(forwardtest.active, forwardtest.error)]]
+                        </paper-button>
+
+                        
                     </div>
                 </div>
     		</template>
             
             <div class="middle-container flex">
-            	<template is='dom-if' if='{{metrics}}'>
-            		<aq-forwardtest-metric-item-list 
+            	<!--template is='dom-if' if='{{metrics}}'-->
+            		<aq-backtest-metric-item-list 
                         heading="Metrics"
             			forced-semi-wide = "[[forcedSemiWide]]"
             			metric-items = "{{metrics}}">
-        			</aq-forwardtest-metric-item-list> 
-            	</template>
+        			</aq-backtest-metric-item-list> 
+            	<!--/template-->
             </div>
 
-            <div class="forwardtest-detail layout horizontal">
+            <div class="layout horizontal" id='forwardtest-detail'>
                 <div class="layout" id="vertical-tab-container">
 	                <iron-selector selected="{{detailType}}" 
                         fallback-selection="0">
@@ -262,23 +316,22 @@
                         <v-tab selected=[[isSelected(detailType,3)]] icon="aq-icons:view-list">Transactions</v-tab>
                         
                         <v-tab selected=[[isSelected(detailType,4)]] icon="add">Logs</v-tab>
+
+                        <v-tab selected=[[isSelected(detailType,5)]] icon="settings">Settings</v-tab>
                     </iron-selector>
                 </div>
                 
                 <div id='iron-page-container'>
                 <iron-pages selected="{{detailType}}">
                     <div id="performance-container">
-                        <div class="heading">PERFORMANCE</div>
-                        <div style="border: 1px solid #e1e1e1">
-                            <aq-backtest-performance-detail-item 
-                                backtest="[[forwardtest]]">
-                            </aq-backtest-performance-detail-item>
-                        </div>
+                        <aq-backtest-performance-detail-item 
+                            backtest="[[forwardtest]]">
+                        </aq-backtest-performance-detail-item>
                     </div>
 
                     <div id="code-container">
-                        <div class="heading">CODE</div>
-                        <juicy-ace-editor readonly style="height:100%; min-height: 400px;" theme="ace/theme/xcode" mode="ace/mode/julia" fontsize="14px" id="codeEditor" tabsize="4">"Code"
+                        <!--div class="heading">CODE</div-->
+                        <juicy-ace-editor readonly style="height:100%; min-height: 400px;" theme="ace/theme/xcode" mode="ace/mode/julia" fontsize="14px" id="codeEditor" tabsize="4" on-change='onCodeChange'>[[forwardtest.code]]
                         </juicy-ace-editor>
                     </div>
                     <div></div>
@@ -339,12 +392,17 @@
 
             },
 
+            onCodeChange: function(e) {
+                console.log(e);
+                console.log(e.detail);
+                this.async(function(){this.$$('juicy-ace-editor').editor.gotoLine(1);}, 20);
+            },
+
             isSelected: function(detailType, val) {
                 return detailType == val;
             },
 
             _forwardtestIdChanged: function (nId, oId) {
-                console.log("hola");
                 if (nId && nId!= "") {
                     this.reset();
                     this.requestStaticData();
@@ -425,10 +483,8 @@
             },
 
             requestStaticData: function () {
-                console.log("kakak");
                 if (this.forwardtestId && this.$.authItem.checkHasToken()) {
                     this.header = this.$.authItem.getHeader();
-                    console.log("alala");
                     this.$.getForwardtestQuery.generateRequest();
                 }
             },
@@ -444,17 +500,17 @@
                   
                     "updatedAt": this.forwardtest.updatedAt ? date.formatDateTime(this.forwardtest.updatedAt): "", 
 
-                    "status":!this.forwardtest.error ? "Running" : "Stopped",
+                    "status": !this.forwardtest.error ? (this.forwardtest.active ? "Running" : "Stopped") : "Error",
                 };
                 
-                if (this.forwardtest.output && this.forwardtest.output.analytics && this.forwardtest.output.analytics.rolling) {
-                    this.addMetricData(this.forwardtest.output.analytics.rolling);
+                if (this.forwardtest.serializedData && this.forwardtest.serializedData.state) {
+                    this.addMetricData(this.forwardtest.serializedData.state);
                 }
 
-                if (this.forwardtest.output.variables) {
+                /*if (this.forwardtest.output.variables) {
                     // this variable is used because array changes are somehow not relaying back the template
                     this.hasTrackVarData = true;
-                }
+                }*/
 
                 this.$$('aq-backtest-performance-detail-item'). updateGraphProperties(this.hasTrackVarData);
 
@@ -465,58 +521,99 @@
                 console.log(e);
             },
 
-            addMetricData: function (data) {
-                this.metrics = [{
-                    "metricName": "Total Return",
-                    "metricValue": data.totalreturn.toString() + '%',
-                    "metricDescription": "Total Return"
-                },
+            addMetricData: function (currentState) {
+                this.metrics = [
                     {
-                        "metricName": "Annual Return",
-                        "metricValue": data.annualreturn.toString() + '%',
-                        "metricDescription": "Annual Return",
+                        "metricName": "Portfolio Value",
+                        "metricValue": currentState.account ? this.formatMoneyValue(currentState.account.netvalue.toFixed(0)) : "-", 
+                        "metricDescription": "Net Asset Value",
+                    },
+                    {
+                        "metricName": "Cash",
+                        "metricValue": currentState.account ? this.formatMoneyValue(currentState.account.cash.toFixed(0)) : "-", 
+                        "metricDescription": "Volatility"
+                    },
+                    {
+                        "metricName": "Leverage",
+                        "metricValue": currentState.account ? currentState.account.leverage.toFixed(2).toString() : "-", 
+                        "metricDescription": "Leverage"
+                    },
+                    {
+                        "metricName": "Total Return",
+                        "metricValue": currentState.performance ? ((currentState.performance.returns.totalreturn - 1)*100).toFixed(2).toString() + '%' : "-",
+                        "metricDescription": "Total Return"
                     },
                     {
                         "metricName": "Volatility",
-                        "metricValue": data.annualstandarddeviation.toString() + '%',
+                        "metricValue": currentState.performance ? (currentState.performance.deviation.annualstandarddeviation * 100).toFixed(2).toString() + '%' : "-",
                         "metricDescription": "Volatility"
                     },
                     {
                         "metricName": "Sharpe Ratio",
-                        "metricValue": data.sharperatio,
+                        "metricValue": currentState.performance ? (currentState.performance.ratios.sharperatio).toFixed(2).toString() : "-",
                         "metricDescription": "Sharpe Ratio"
                     },
                     {
                         "metricName": "Information Ratio",
-                        "metricValue": data.informationratio,
+                        "metricValue": currentState.performance ? (currentState.performance.ratios.informationratio).toFixed(2).toString() : "-",
                         "metricDescription": "Information Ratio"
                     },
-                    //{"metricName":"Sortino Ratio", "metricValue":"2.5", "metricDescription":"Sortino Ratio"},
-                    //{"metricName":"Avg. Drawdown", "metricValue":data.drawdown.toFixed(2).toString()+'%', "metricDescription":"Avg. Drawdown"},
                     {
-                        "metricName": "Max Drawdown",
-                        "metricValue": data.maxdrawdown.toString() + '%',
-                        "metricDescription": "Max Drawdown"
+                        "metricName": "Beta",
+                        "metricValue": currentState.performance ? (currentState.performance.ratios.beta).toFixed(2).toString() : "-",
+                        "metricDescription": "Beta"
                     },
-                    {
-                        "metricName": "Calmar Ratio",
-                        "metricValue": data.calmarratio,
-                        "metricDescription": "Calmar Ratio"
-                    },
-                    {"metricName": "Beta", "metricValue": data.beta, "metricDescription": "Beta"},
-                    {
-                        "metricName": "Stability",
-                        "metricValue": (data.stability) ? data.stability : "-",
-                        "metricDescription": "Stability"
-                    },
-                    {"metricName": "Alpha", "metricValue": data.alpha.toString() + '%', "metricDescription": "Alpha"},
-                    //{"metricName":"Avg. Concentration", "metricValue":"0.43", "metricDescription":"Avg. Concentration"},
+                    
                 ];
+
+                console.log(this.metrics);
             },
 
             deepCopy: function(array) {
 				return JSON.parse(JSON.stringify(array));
 			},
+
+            onStopTest: function() {
+                this.fire('stoptest-clicked', {id: this.forwardtestId});
+            },
+
+            onDeleteTest: function() {
+                this.fire('deletetest-clicked', {id: this.forwardtestId});
+            },
+
+            computeButtonText: function(active, error) {
+                return active ? (error ? "Delete Test" : "Stop Test") : "ReStart Test";
+            },
+
+            computeButtonClass: function(active, error) {
+                return active ? (error ? "delete" : "stop") : "start";
+            },
+
+            computeStatusClass: function(active, error) {
+                return active ? "green" : "red";
+            }, 
+
+            formatMoneyValue: function(val) {
+                
+                //var numCommas = Math.floor(Math.log10(val)/3);
+                //1029732
+                //0123456
+                //1234567
+                var valStr = val.toString();
+                valStr = valStr.split("").reverse().join("");
+                var str="";
+                for(var i=0; i<valStr.length; i++) {
+                    if((i+1)%3 == 0 && i<valStr.length-1) {
+                        str = str.concat(valStr[i]+',');
+                    } else {
+                        str = str.concat(valStr[i]);
+                    }
+                }                    
+            
+                return str.split("").reverse().join("");
+
+            },
+
         });
     </script>
     
